<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_margin_20"
        android:background="@drawable/btn_back"

        app:layout_constraintBottom_toTopOf="@+id/constr_recovery"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constr_recovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_margin_10"
        android:foregroundGravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen_padding_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_change_password_title"
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="@dimen/dimen_margin_78"
            android:text="@string/parola_noua"

            app:layout_constraintBottom_toTopOf="@id/edt_password_change_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginBottom="@dimen/dimen_margin_78" />

        <EditText
            android:id="@+id/edt_password_change_1"
            style="@style/edtStyle_Light"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_margin_20"
            android:autofillHints=""
            android:drawableStart="@drawable/lock_ico"
            android:hint="@string/parola"
            android:inputType="textPassword"

            app:layout_constraintBottom_toTopOf="@id/edt_password_change_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_change_password_title" />

        <EditText
            android:id="@+id/edt_password_change_2"
            style="@style/edtStyle_Light"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_margin_20"
            android:autofillHints=""
            android:drawableStart="@drawable/lock_ico"
            android:drawablePadding="@dimen/dimen_padding_10"
            android:hint="@string/verifica_parola"
            android:inputType="textPassword"

            app:layout_constraintBottom_toTopOf="@id/btn_recovery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_password_change_1" />

        <Button
            android:id="@+id/btn_recovery"
            style="@style/btnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_margin_20"
            android:text="@string/schimba_parola"

            app:layout_constraintBottom_toTopOf="@id/tv_parola_schimbata"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_password_change_2"

            />

        <TextView
            android:id="@+id/tv_parola_schimbata"
            style="@style/infoItalic_Monsterrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/parola_schimbata_cu_succes"
            android:textColor="@color/colorWhite"
            android:visibility="invisible"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_recovery" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>